--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     }
 
     function loginAdmin() {
-        if (document.getElementById('admin-pass').value === "helios123") {
+        if (document.getElementById('admin-pass').value === "helios16.") {
             document.getElementById('admin-auth').classList.add('hidden');
             document.getElementById('admin-panel').classList.remove('hidden');
             loadAdminPanel();
@@ -198,4 +198,5 @@
 </script>
 
 </body>
+
 </html>
