--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <header>
         <img src="HElios.jpg" alt="Helios Logo" class="logo">
         <h1>Helios Scientific Forum</h1>
-        <p style="color: #666;">ანონიმური სამეცნიერო კვლევის პლატფორმა</p>
+        <p style="color: #666;">ანონიმური გამოკითხვა</p>
     </header>
 
     <div id="user-auth-section">
@@ -201,4 +201,5 @@
 </body>
 
 </html>
+
 
