--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         header { text-align: center; border-bottom: 2px solid var(--primary); padding-bottom: 20px; margin-bottom: 30px; }
         .logo { max-width: 150px; height: auto; margin-bottom: 10px; }
         h1 { color: var(--primary); margin: 0; font-size: 26px; text-transform: uppercase; letter-spacing: 1px; }
-        .hidden { display: none; }
+        .hidden { display: none !important; }
         .card { background: #fff; padding: 20px; border-radius: 12px; border: 1px solid #eee; margin-bottom: 20px; box-shadow: 0 2px 5px rgba(0,0,0,0.05); }
         input, select, textarea { width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ccc; border-radius: 8px; font-size: 16px; box-sizing: border-box; }
         button { width: 100%; background: var(--primary); color: white; padding: 12px; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; transition: 0.3s; font-size: 16px; }
@@ -24,9 +24,37 @@
         .btn-delete { background: #dc3545; width: auto; padding: 6px 12px; font-size: 12px; margin-top: 10px; }
         .response-card { background: #f8f9fa; padding: 15px; margin-top: 10px; border-radius: 8px; border-left: 4px solid var(--accent); font-size: 14px; }
         .admin-link { text-align: center; margin-top: 40px; font-size: 12px; color: #bbb; cursor: pointer; text-decoration: underline; }
+
+        /* მოდალური ფანჯრის სტილები */
+        #research-modal {
+            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+            background: rgba(0,0,0,0.85); display: none; justify-content: center;
+            align-items: center; z-index: 9999;
+        }
+        .modal-content {
+            background: white; padding: 30px; border-radius: 15px;
+            max-width: 550px; width: 90%; max-height: 80vh; overflow-y: auto;
+            text-align: left; box-shadow: 0 5px 25px rgba(0,0,0,0.5); line-height: 1.6;
+        }
+        .modal-content h2 { color: var(--primary); margin-top: 0; text-align: center; font-size: 20px; border-bottom: 1px solid #eee; padding-bottom: 10px; }
+        .modal-content p { font-size: 14px; color: #333; margin-bottom: 20px; white-space: pre-line; }
     </style>
 </head>
 <body>
+
+<div id="research-modal">
+    <div class="modal-content">
+        <h2>ინფორმაცია კვლევის შესახებ</h2>
+        <p>მოცემული ვებსაიტი შექმნილია აკადემიური კვლევის ფარგლებში და განკუთვნილია ანონიმური გამოკითხვის ჩასატარებლად. გამოკითხვა წარმოადგენს კვლევის ერთ-ერთ ძირითად მეთოდს, რომლის საფუძველზეც მომზადდება სამეცნიერო/აკადემიური ნაშრომი.
+
+        კვლევის პროცესში მონაწილეთა მიერ მოწოდებული ყველა ინფორმაცია მუშავდება მკაცრი ეთიკური სტანდარტების დაცვით. გამოკითხვაში მონაწილეობა სრულად ანონიმურია — არ ხდება პერსონალური მონაცემების შეგროვება, იდენტიფიკაცია ან მესამე მხარისთვის გადაცემა. თითოეული რესპონდენტის პირადი სივრცე, კონფიდენციალურობა და მონაცემთა უსაფრთხოება სრულად არის დაცული.
+
+        მიღებული პასუხები გამოყენებული იქნება მხოლოდ კვლევითი მიზნებისთვის, სტატისტიკური ანალიზისა და ზოგადი ტენდენციების შესასწავლად. ინდივიდუალური პასუხები არ განიხილება ცალკე და არ იქნება დაკავშირებული კონკრეტულ პირებთან.
+
+        ვებსაიტზე გამოკითხვაში მონაწილეობით, მომხმარებელი ადასტურებს და აცნობიერებს, რომ მისი პასუხები გამოყენებული იქნება მხოლოდ კვლევის ფარგლებში.</p>
+        <button onclick="closeModal()">დახურვა</button>
+    </div>
+</div>
 
 <div class="container">
     <header>
@@ -76,7 +104,21 @@
 </div>
 
 <script>
-    // შენი Firebase კონფიგურაცია
+    // მოდალური ფანჯრის ლოგიკა
+    window.addEventListener('load', function() {
+        const modal = document.getElementById('research-modal');
+        if (!localStorage.getItem('modalWasShown')) {
+            modal.style.display = 'flex';
+        }
+    });
+
+    function closeModal() {
+        const modal = document.getElementById('research-modal');
+        modal.style.display = 'none';
+        localStorage.setItem('modalWasShown', 'true');
+    }
+
+    // Firebase კონფიგურაცია
     const firebaseConfig = {
         apiKey: "AIzaSyALpHIp1BG-vgogU7Q-GlKT6F-KvoiMi5o",
         authDomain: "helios-forum.firebaseapp.com",
@@ -87,13 +129,11 @@
         measurementId: "G-EG4YWL0T6Q"
     };
 
-    // ინიციალიზაცია
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
     let currentAge, currentGender;
 
-    // ფორუმზე შესვლა
     function startForum() {
         currentAge = document.getElementById('user-age').value;
         currentGender = document.getElementById('user-gender').value;
@@ -104,7 +144,6 @@
         loadQuestions();
     }
 
-    // კითხვების წამოღება
     function loadQuestions() {
         db.ref('questions').on('value', (snapshot) => {
             const list = document.getElementById('questions-list');
@@ -122,7 +161,6 @@
         });
     }
 
-    // პასუხის გაგზავნა
     function sendAnswer(qId, qText) {
         const answerField = document.getElementById(`ans-${qId}`);
         if (!answerField.value) { alert("პასუხი ცარიელია"); return; }
@@ -139,7 +177,6 @@
         answerField.value = "";
     }
 
-    // ადმინ ფუნქციები
     function showAdminAuth() {
         document.getElementById('user-auth-section').classList.add('hidden');
         document.getElementById('forum-section').classList.add('hidden');
@@ -163,7 +200,6 @@
     }
 
     function loadAdminPanel() {
-        // კითხვების მართვა და პასუხების ნახვა ერთად
         db.ref('questions').on('value', (qSnap) => {
             const display = document.getElementById('admin-data-display');
             display.innerHTML = "<h4>კითხვების მართვა:</h4>";
@@ -199,7 +235,4 @@
 </script>
 
 </body>
-
 </html>
-
-
