--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         /* მოდალური ფანჯრის სტილები */
         #research-modal {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            background: rgba(0,0,0,0.85); display: none; justify-content: center;
+            background: rgba(0,0,0,0.85); display: flex; justify-content: center;
             align-items: center; z-index: 9999;
         }
         .modal-content {
@@ -47,7 +47,7 @@
         <h2>ინფორმაცია კვლევის შესახებ</h2>
         <p>მოცემული ვებსაიტი შექმნილია აკადემიური კვლევის ფარგლებში და განკუთვნილია ანონიმური გამოკითხვის ჩასატარებლად. გამოკითხვა წარმოადგენს კვლევის ერთ-ერთ ძირითად მეთოდს, რომლის საფუძველზეც მომზადდება სამეცნიერო/აკადემიური ნაშრომი.
 
-        კვლევის პროცესში მონაწილეთა მიერ მოწოდებული ყველა ინფორმაცია მუშავდება მკაცრი ეთიკური სტანდარტების დაცვით. გამოკითხვაში მონაწილეობა სრულად ანონიმურია — არ ხდება პერსონალური მონაცემების შეგროვება, იდენტიფიკაცია ან მესამე მხარისთვის გადაცემა. თითოეული რესპონდენტის პირადი სივრცე, კონფიდენციალურობა და მონაცემთა უსაფრთხოება სრულად არის დაცული.
+        კვლევის პროცესში მონაწილეთა მიერ მოწოდებული ყველა ინფორმაცია მუშავდება მკაცრი ეთიკური სტანდარტების დაცვით. გამოკითხვაში მონაწილეობა სრულად ანონიმურია — არ ხდება პერსონალური მონაცების შეგროვება, იდენტიფიკაცია ან მესამე მხარისთვის გადაცემა. თითოეული რესპონდენტის პირადი სივრცე, კონფიდენციალურობა და მონაცემთა უსაფრთხოება სრულად არის დაცული.
 
         მიღებული პასუხები გამოყენებული იქნება მხოლოდ კვლევითი მიზნებისთვის, სტატისტიკური ანალიზისა და ზოგადი ტენდენციების შესასწავლად. ინდივიდუალური პასუხები არ განიხილება ცალკე და არ იქნება დაკავშირებული კონკრეტულ პირებთან.
 
@@ -104,18 +104,9 @@
 </div>
 
 <script>
-    // მოდალური ფანჯრის ლოგიკა
-    window.addEventListener('load', function() {
-        const modal = document.getElementById('research-modal');
-        if (!localStorage.getItem('modalWasShown')) {
-            modal.style.display = 'flex';
-        }
-    });
-
+    // მოდალური ფანჯრის დახურვის ფუნქცია
     function closeModal() {
-        const modal = document.getElementById('research-modal');
-        modal.style.display = 'none';
-        localStorage.setItem('modalWasShown', 'true');
+        document.getElementById('research-modal').style.display = 'none';
     }
 
     // Firebase კონფიგურაცია
