--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <option value="მდედრობითი">მდედრობითი</option>
                 <option value="სხვა">სხვა</option>
             </select>
-            <button onclick="startForum()">ფორუმზე შესვლა</button>
+            <button onclick="startForum()">შესვლა</button>
         </div>
     </div>
 
@@ -332,3 +332,4 @@
 
 </body>
 </html>
+
